[85] updated swagger
